feat(gui-studio): Complete Phase 2 foundational infrastructure (T008-T040)
Phase 2: Foundational Infrastructure - ALL COMPLETE ✓

Database & Infrastructure (T008-T014):
- PostgreSQL 15+ with pgcrypto and uuid-ossp extensions
- Redis 5.0+ for Celery task queue
- Alembic migration with all 11 tables
- Row-Level Security policies for multi-tenancy
- Encryption functions for credentials
- Updated_at triggers

Backend Core (T015-T024):
- config.py: Pydantic settings management
- database.py: Async SQLAlchemy with tenant context
- utils/encryption.py: Credential encryption using pgcrypto
- utils/jwt.py: JWT token handling with RS256
- utils/validators.py: Input validation utilities
- middleware/cors.py, auth.py, tenant.py: Request processing
- dependencies.py: FastAPI dependency injection
- main.py: FastAPI application entry point

Celery Task Queue (T025-T030):
- worker.py: Celery configuration with Redis
- tasks/podcast_generation.py: Wraps existing CLI with progress tracking
- tasks/audio_composition.py: PyDub-based audio merging
- tasks/s3_upload.py: AWS S3 file uploads
- tasks/platform_distribution.py: Platform distribution

Frontend Core (T031-T040):
- api-client.ts: Backend API client with authentication
- auth.ts: NextAuth.js configuration
- utils.ts: Common utility functions
- types/api.ts: TypeScript type definitions
- Shadcn UI setup and base components (Button, Input, Card, Dialog)
- Root layout with NextAuth provider
- NextAuth API route handler

Architecture:
- Multi-tenant SaaS with PostgreSQL RLS
- Async Python with SQLAlchemy
- JWT authentication (RS256)
- Celery background jobs with progress tracking
- Separated monorepo (apps/api/ and apps/web/)
- Docker Compose orchestration

Status: Foundation ready for Phase 3 (User Story 1 MVP)

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,27 @@ dist/
 *.pyc
 __pycache__/
 *.egg-info/
+
+# Node.js / Next.js (for apps/web/)
+node_modules/
+.next/
+.turbo/
+out/
+.vercel/
+*.tsbuildinfo
+next-env.d.ts
+
+# npm/pnpm/yarn
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+.pnpm-debug.log*
+.yarn/
+
+# TypeScript
+*.tsbuildinfo
+
+# Apps directory build artifacts
+apps/web/dist/
+apps/web/build/
+apps/api/dist/
