refactor: Remove vendored podcastfy code, use pip package instead
BREAKING CHANGE: Podcastfy is now installed as a pip dependency instead of being vendored in the repository.

Changes:
- Remove podcastfy/ directory from git tracking (1.3MB)
- Remove large notebook files (podcastfy.ipynb 14MB, usage/examples.ipynb)
- Add podcastfy>=0.4.1 to apps/api/pyproject.toml dependencies
- Update .gitignore to exclude podcastfy directory and large notebooks
- Update UPSTREAM_SYNC.md with instructions for updating podcastfy version
- Clean up git remotes: origin -> podcaststudiohub

Benefits:
- Reduces repository size by ~15MB
- Easier to update podcastfy to latest versions
- Clearer separation between PodcastStudioHub code and dependencies
- Follows Python best practices for dependency management

To install after pulling:
cd apps/api && pip install -e .

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,10 @@ yarn.lock
 apps/web/dist/
 apps/web/build/
 apps/api/dist/
+
+# Podcastfy CLI - installed as package, not vendored
+podcastfy/
+
+# Large notebook files
+podcastfy.ipynb
+usage/examples.ipynb
