--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "redis>=5.0.0",
     "boto3>=1.28.0",
     "python-dotenv>=1.0.0",
+    "podcastfy>=0.4.1",
 ]
 
 [build-system]
