fix: use npm install instead of npm ci
npm ci requires package-lock.json which doesn't exist in this project.
Changed to npm install which works without a lockfile.

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Install frontend dependencies
         working-directory: apps/web
-        run: npm ci
+        run: npm install
 
       - name: Build frontend
         working-directory: apps/web
