--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ eggs/
 .eggs/
 lib/
 lib64/
+
+# Exception: Allow Next.js lib directory for shadcn/ui components
+!apps/web/src/lib/
 parts/
 sdist/
 var/
