security: move SERVER_USER from variable to secret
Changed SERVER_USER from environment variable to secret for better security:
- Username obscurity adds layer of security
- Prepares for migration from 'root' to dedicated admin user
- Updated workflow to use secrets.SERVER_USER instead of vars.SERVER_USER
- Updated documentation to reflect this change

Action required: In GitHub Settings → Environments → development:
1. Remove SERVER_USER from Variables
2. Add SERVER_USER to Secrets with value 'root' (change later to dedicated user)

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -71,7 +71,7 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SSH_HOST: ${{ vars.SERVER_HOST }}
-          SSH_USER: ${{ vars.SERVER_USER }}
+          SSH_USER: ${{ secrets.SERVER_USER }}
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy_key
@@ -81,7 +81,7 @@ jobs:
       - name: Deploy API
         env:
           SSH_HOST: ${{ vars.SERVER_HOST }}
-          SSH_USER: ${{ vars.SERVER_USER }}
+          SSH_USER: ${{ secrets.SERVER_USER }}
           SERVER_PATH: ${{ vars.SERVER_PATH }}
         run: |
           ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST << EOF
@@ -112,7 +112,7 @@ jobs:
       - name: Deploy Frontend
         env:
           SSH_HOST: ${{ vars.SERVER_HOST }}
-          SSH_USER: ${{ vars.SERVER_USER }}
+          SSH_USER: ${{ secrets.SERVER_USER }}
           SERVER_PATH: ${{ vars.SERVER_PATH }}
           API_URL: ${{ vars.API_URL }}
         run: |
@@ -136,7 +136,7 @@ jobs:
       - name: Restart Celery
         env:
           SSH_HOST: ${{ vars.SERVER_HOST }}
-          SSH_USER: ${{ vars.SERVER_USER }}
+          SSH_USER: ${{ secrets.SERVER_USER }}
         run: |
           ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "pm2 restart podcaststudiohub-celery"
           echo "Celery deployment complete"
