feat: add Playwright E2E test infrastructure and authentication tests
Set up comprehensive Playwright testing framework with complete auth coverage.

Infrastructure Added:
- playwright.config.ts: Multi-browser config (Chrome, Firefox, Safari, Mobile)
- HTML/list/GitHub reporters with screenshots and videos on failure
- Parallel test execution with CI optimizations

Test Utilities Created (tests/e2e/utils/):
- auth-helpers.ts: signup, login, logout, session management functions
- project-helpers.ts: project CRUD operation helpers
- episode-helpers.ts: episode management, content sources, podcast generation

Implemented Tests (tests/e2e/specs/01-auth.spec.ts):
✅ Sign Up Flow:
  - Form validation (required fields, min length)
  - Successful user registration
  - Duplicate email prevention

✅ Login Flow:
  - Valid/invalid credentials
  - Non-existent user handling
  - Error message display

✅ Session Management:
  - Session persistence on reload
  - Protected route access (dashboard, projects, episodes)
  - Redirect to login when unauthorized

✅ Navigation:
  - Login ↔ Signup navigation links

NPM Scripts:
- test:e2e: Run all E2E tests
- test:e2e:headed: Run with visible browser
- test:e2e:debug: Interactive debugging
- test:e2e:report: View HTML test report

Modified .gitignore:
- Allow tests/**/*.spec.ts files
- Allow tests/e2e/specs/ directory

Test Coverage:
- Authentication: ~100% automated (20 test cases)
- Projects/Episodes/Content: Helper utilities ready, specs pending
- Framework ready for performance, accessibility, visual regression

Next Steps:
- Implement 02-10 test specs (projects, episodes, generation, etc.)
- Add GitHub Actions workflow for CI
- Configure visual regression with Percy
- Add accessibility testing with axe-core

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 specs/
 
+# But allow E2E test specs
+!tests/e2e/specs/
+
 *.whl
 *.wheels
 
@@ -67,6 +70,9 @@ wheels/
 # PyInstaller
 *.manifest
 *.spec
+
+# But allow Playwright test specs
+!tests/**/*.spec.ts
 
 # Installer logs
 pip-log.txt
