--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -128,12 +128,9 @@ jobs:
             $SSH_USER@$SSH_HOST:$SERVER_PATH/frontend/public/
 
           # Create .env.production with runtime environment variables
-          ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "cat > $SERVER_PATH/frontend/.env.production << 'ENVEOF'
-NEXT_PUBLIC_API_URL=$API_URL
-NEXTAUTH_SECRET=$NEXTAUTH_SECRET
-NEXTAUTH_URL=$NEXTAUTH_URL
-ENVEOF
-"
+          ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "echo 'NEXT_PUBLIC_API_URL=$API_URL' > $SERVER_PATH/frontend/.env.production"
+          ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "echo 'NEXTAUTH_SECRET=$NEXTAUTH_SECRET' >> $SERVER_PATH/frontend/.env.production"
+          ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "echo 'NEXTAUTH_URL=$NEXTAUTH_URL' >> $SERVER_PATH/frontend/.env.production"
           echo "Runtime environment variables configured"
 
           # Update runtime config on server
