--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -118,11 +118,7 @@ jobs:
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
           NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
         run: |
-          # Sync built frontend to server
-          rsync -avz --delete -e "ssh -i ~/.ssh/deploy_key" \
-            apps/web/.next/ \
-            $SSH_USER@$SSH_HOST:$SERVER_PATH/frontend/.next/
-
+          # Sync public files to server
           rsync -avz -e "ssh -i ~/.ssh/deploy_key" \
             apps/web/public/ \
             $SSH_USER@$SSH_HOST:$SERVER_PATH/frontend/public/
@@ -144,11 +140,14 @@ jobs:
           # Install dependencies on server
           ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "cd $SERVER_PATH/frontend && npm ci"
 
-          # Create .env.production with runtime environment variables
+          # Create .env.production with runtime environment variables (needed for build)
           ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "echo 'NEXT_PUBLIC_API_URL=$API_URL' > $SERVER_PATH/frontend/.env.production"
           ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "echo 'NEXTAUTH_SECRET=$NEXTAUTH_SECRET' >> $SERVER_PATH/frontend/.env.production"
           ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "echo 'NEXTAUTH_URL=$NEXTAUTH_URL' >> $SERVER_PATH/frontend/.env.production"
           echo "Runtime environment variables configured"
+
+          # Rebuild Next.js on server with server's node_modules
+          ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "cd $SERVER_PATH/frontend && npm run build"
 
           # Update runtime config on server
           ssh -i ~/.ssh/deploy_key $SSH_USER@$SSH_HOST "echo \"window.__ENV__ = { API_URL: '$API_URL' };\" > $SERVER_PATH/frontend/public/config.js"
